assets/css/styles.css
* {
  box-sizing: border-box;
}

/* added flexbox for sticky footer */
html, body {
  height: 100%;
}

.content {
  min-height:720px;
}

body {
  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
  color: #777777;
  background: url('../images/dust_scratches.png');
}

h1, h2, h3 {
  font-family: "Georgia", Times, Times New Roman, serif;
}

h1, h2 {
  color: #4aaaa5;
}

.heading {
  position:fixed;
  width:100%;
  background: #ffffff;
  border-color: #cccccc;
  border-bottom: 3px solid #ccc;
}

#logo {
  float: left;
  height:80px;
  width:330px;
  color:white;
  font-size:30px;
  background: #4aaaa5;
  text-align:center;
  margin: 0 auto;
  line-height:80px;
}

.menu {
  padding-top: 25px;
  float:right
}

.menu a {
  padding-left: 20px;
  margin-left:20px;
  text-decoration: none;
  display:inline-block;
  line-height:20px;
  color:#9a9b9c;
}

.borderOption {
    border-left: 2px solid #f1f1f1;
}

.blocking {
  width: 100%;
  max-width: 960px;
  margin: 0 auto;
  clear: both;
}

#contentBlock {
  padding-top:120px;
}

.mainContent {
  float:left;
  width: 100%;
  max-width: 650px;
  margin: 0px 0px 40px;
  background:white;
  padding: 10px 30px 30px 30px;
  border: 1px solid #dddddd;
}

.sectionTitle {
    border-bottom: 3px solid #DCDCDC;
    padding: 0px 0px 28px;
    font-size: 30px;
}

h2 {
    border-bottom: 2px solid #F5F5F5;
    padding:0px 0px 22px;
    line-height:22px;
    font-size: 20px;
    text-align:center;
}

.sidebar {
  float:right;
  width: 100%;
  max-width: 270px;
  background:white;
  padding:14px 28px 30px 28px;
  border: 1px solid #dddddd;
}

.socialMedia {
  width: 62px;
  height: 62px;
}

.problemChild {
  width: 56px;
  height: 56px;
  margin-bottom:3px;
}


.socialMedia:hover {
  border: 2px solid grey;
}

.problemChild:hover {
  border: 2px solid grey;
}


.foot {
  padding: 30px 0;
  text-align:center;
  color: #c1d0d8;
  font-size: 12px;
  background: #666666;
  clear:both;
  border-top: 5px solid #4aaaa5;
  margin-top:40px;
}

/*Index.html Specific Style*/

.portrait {
  float: left;
  margin: 0px 10px 10px;
}

/* Contact Page Specific Style */

#form {
  font-size: 18px;
  line-height: 35px;
}

#commentBox {
  height: 190px;
  width: 565px;
  border-color:#e6e6e6
}

.identity {
height: 35px;
width: 565px;
margin-bottom: 8px;
}

#submitButton {
  height:40px;
  width: 112px;
  font-size: 18px;
  color: #fffaf0;
  text-align: center;
  background: #4aaaa5;
  border: none;
  margin-top: 8px;
}

/* code for editing the color of placeholder text */
input::-webkit-input-placeholder {
color: #c1d0d8 !important;
}

input:-moz-placeholder { /* Firefox 18- */
color: #c1d0d8 !important;
}

input::-moz-placeholder {  /* Firefox 19+ */
color: #c1d0d8 !important;
}

input:-ms-input-placeholder {
color: #c1d0d8 !important;
}

/* Portfolio Page */

.projectBox {
  float:left;
  text-align: center;
  width: 275px;
  height: 200px;
}


.projectBox:hover { /* help make the links more obvious*/
  border: 3px solid black;
}

.projectName {
  color:white;
  background: #4aaaa5;
  font-size: 18px;
  line-height: 58px;
  font-weight: normal;
  margin-top:130px
}

.projectLink {
  text-decoration: none;
}

#hangmanBox {
  background-image: url(../images/placeholder1.jpeg);
  margin: 10px 10px 25px;
}

#rpgBox {
  background-image: url(../images/placeholder2.jpeg);
  margin: 10px 0px 25px 10px;
}

#triviaBox {
  background-image: url(../images/placeholder3.jpeg);
  margin: 25px 10px 25px;
}

#widgetBox {
  background-image: url(../images/placeholder4.jpeg);
  margin: 25px 0px 25px 10px;
}

#rpsBox {
  background-image: url(../images/placeholder5.jpeg);
  margin: 25px 10px 10px;
}

